2002-06-18  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp:
	* src/bytecode.h:
	* src/expr.cpp: Formatting.
	* src/error.cpp (SELF_IN_EXPLICIT_CONSTRUCTOR),
	(ENCLOSING_INSTANCE_ACCESS_FROM_CONSTRUCTOR_INVOCATION): Improve
	error wording.

2002-06-17  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ConstructorAccessCheck): Allow access of protected
	superconstructors - bug 2899.

2002-06-17  Eric Blake  <ebb9@email.byu.edu>

	* src/body.cpp (ProcessSuperCall): Remove duplicate error message,
	final cleanup for bug 386.
	
2002-06-17  Eric Blake  <ebb9@email.byu.edu>

	* src/decl.cpp (AddInheritedMethods): Synthetic methods do not
	need to be inherited - bug 2924.

2002-06-17  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (EmitSwitchStatement, EmitBlockStatement),
	(DeclareLocalVariable):
	* src/bytecode.h (Push, Pop): Mark local variables uninitialized
	regardless of JIKES_DEBUG, and fix problems when a declaration
	statement is not executed because a prior statement ended abruptly
	- bug 2907.

2002-06-17  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (EmitSwitchStatement): Don't optimize gotos
	with no-op default label - bug 2895.

2002-06-15  Chris Abbey  <jikes@cabbey.net>

	* src/unparse.cpp (AstCompilationUnit::Unparse): fix definition
	signature to match declaration signature in ast.h; AIX's xlC
	compiler isn't as sloppy as gcc about signature constnes.

2002-06-05  Chris Abbey  <jikes@cabbey.net>

	* src/bytecode.cpp (EmitAssertStatement): produce proper error
	instead of assertion if user requests -source 1.4 and uses asserts
	in their code but doesn't have Ljava/lang/AssertionError;
	available because they used a 1.3 rt.jar in BOOTCLASSPATH for
	example.

2002-06-04  Andrew G. Tereschenko  <tag@ibis.odessa.ua>

	* src/double.cpp: additional parenthesis near shift operators
	to make MSVC v7 (.NET) happier.

2002-06-03  Chris Dennis  <chris.dennis@invidi.com>

	* src/expr.cpp (ProcessClassInstanceCreationExpression):